dnl Process this file with autoconf to produce a configure script.
dnl $Id: configure.in,v 1.2 2006/08/01 18:30:38 cuspy Exp $

AC_INIT(mysqlfs.c)
AM_INIT_AUTOMAKE(mysqlfs, 0.2)

AC_DEFINE(_FILE_OFFSET_BITS,64,[Use 64 bits file offsets])
AC_DEFINE(FUSE_USE_VERSION,22,[Fuse API Version])
AC_ARG_WITH(mysql, [  --with-mysql=DIR    mysql directory ])
AC_ARG_WITH(fuse, [  --with-fuse=DIR    fuse directory ])


dnl Checks for programs.
AC_PROG_CC

FUSE_DIR=
FUSE_INC_DIR=
FUSE_LIB_DIR=
for i in /usr/local/fuse /usr/local /usr; do
  if test -r $i/include/fuse.h; then
    FUSE_DIR=$i
    FUSE_LIB_DIR=$i/lib
    FUSE_INC_DIR=$i/include
    break
  fi
done
FUSE_LDFLAGS="-L${FUSE_LIB_DIR}"
FUSE_CFLAGS="-I${FUSE_INC_DIR}"
LDFLAGS="$LDFLAGS $FUSE_LDFLAGS"
CFLAGS="$LDFLAGS $FUSE_CFLAGS"

MYSQL_DIR=
MYSQL_INC_DIR=
MYSQL_LIB_DIR=
for i in /usr/local/mysql /usr/local /usr; do
  if test -r $i/include/mysql/mysql.h; then
    MYSQL_DIR=$i
    MYSQL_LIB_DIR=$i/lib/mysql
    MYSQL_INC_DIR=$i/include/mysql
    break
  elif test -r $i/include/mysql.h; then
    MYSQL_DIR=$i
    MYSQL_LIB_DIR=$i/lib
    MYSQL_INC_DIR=$i/include
    break
  fi
done
MYSQL_LDFLAGS="-L${MYSQL_LIB_DIR}"
MYSQL_CFLAGS="-I${MYSQL_INC_DIR}"
LDFLAGS="$LDFLAGS $MYSQL_LDFLAGS"
CFLAGS="$CFLAGS $MYSQL_CFLAGS"

dnl Checks for libraries.
AC_CHECK_LIB(pthread, pthread_create,, AC_MSG_ERROR([Please install pthreads library first.]))
AC_CHECK_LIB(mysqlclient, mysql_init,, AC_MSG_ERROR([Please install mysqlclient library first.]))
AC_CHECK_LIB(fuse, fuse_main,, AC_MSG_ERROR([Please install fuse library first.]))

dnl Checks for header files.
AC_CHECK_HEADERS(stdio.h)
AC_CHECK_HEADERS(${FUSE_INC_DIR}/fuse.h,, AC_MSG_ERROR([Please install fuse header files.]))
AC_CHECK_HEADERS(${MYSQL_INC_DIR}/mysql.h,, AC_MSG_ERROR([Please install mysql header files.]))

AC_OUTPUT(Makefile)
